[gd_scene load_steps=14 format=2]

[ext_resource path="res://Ship.gd" type="Script" id=1]
[ext_resource path="res://Graphics/engine1.png" type="Texture" id=2]
[ext_resource path="res://Graphics/engine2.png" type="Texture" id=3]
[ext_resource path="res://Graphics/engine3.png" type="Texture" id=4]
[ext_resource path="res://Graphics/shield2.png" type="Texture" id=5]
[ext_resource path="res://Graphics/ship.png" type="Texture" id=6]
[ext_resource path="res://Graphics/collision_particle.png" type="Texture" id=7]
[ext_resource path="res://Camera2D.gd" type="Script" id=8]
[ext_resource path="res://Sounds/46492__phreaksaccount__shields1.ogg" type="AudioStream" id=9]
[ext_resource path="res://Sounds/185828__lloydevans09__little-thing.wav" type="AudioStream" id=10]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="ParticlesMaterial" id=2]

render_priority = 0
trail_divisor = 1
emission_shape = 0
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 180.0
flatness = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 100.0
initial_velocity_random = 0.0
angular_velocity = 100.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 100.0
linear_accel_random = 0.0
radial_accel = 5.0
radial_accel_random = 1.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.0
angle = 360.0
angle_random = 1.0
scale = 1.0
scale_random = 0.0
color = Color( 1, 1, 1, 1 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Angle", "Angular Velocity", "Gravity", "Hue Variation", "Initial Velocity", "Linear Accel", "Radial Accel", "Spread" ]

[sub_resource type="Animation" id=3]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ), Vector2( 1, 1 ) ]
}

[node name="Ship" type="KinematicBody2D" index="0"]

position = Vector2( 302.741, 404.414 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Transform", "collision" ]
speed = 250
speed_increase = 0.1
rotation_speed = 1.5

[node name="Engine" type="AnimatedSprite" parent="." index="0"]

position = Vector2( 0, 71.4597 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
animation = "default"
playing = true
_sections_unfolded = [ "Transform" ]

[node name="ShieldSprite" type="Sprite" parent="." index="1"]

position = Vector2( -0.663422, -0.29764 )
texture = ExtResource( 5 )
_sections_unfolded = [ "Transform" ]

[node name="ShipSprite" type="Sprite" parent="." index="2"]

texture = ExtResource( 6 )

[node name="HitEffect" type="Particles2D" parent="." index="3"]

position = Vector2( 0, 71.4597 )
scale = Vector2( 0.5, 0.5 )
emitting = false
amount = 15
lifetime = 0.25
one_shot = false
preprocess = 0.0
speed_scale = 1.0
explosiveness = 1.0
randomness = 1.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = true
draw_order = 0
process_material = SubResource( 2 )
texture = ExtResource( 7 )
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Drawing", "Process Material", "Textures", "Time", "Transform" ]

[node name="Camera2D" type="Camera2D" parent="." index="4"]

position = Vector2( 0, -250 )
anchor_mode = 1
rotating = true
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = false
drag_margin_v_enabled = false
smoothing_enabled = false
smoothing_speed = 1.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.0
drag_margin_right = 0.2
drag_margin_bottom = 0.0
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = true
script = ExtResource( 8 )
_sections_unfolded = [ "Drag Margin", "Editor", "Smoothing", "Transform" ]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="." index="5"]

build_mode = 0
polygon = PoolVector2Array( -43.3396, 48.1022, -43.7368, 38.5691, -7.19308, -49.6124, 7.1066, -49.6124, 43.2531, 36.9803, 43.2531, 45.3217, 38.4865, 50.4855, 0.353973, 44.1301, -37.3814, 51.28 )
_sections_unfolded = [ "Transform" ]

[node name="ItemCollectArea" type="Area2D" parent="." index="6"]

editor/display_folded = true
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 2
collision_mask = 2
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="ItemCollectAreaShape" type="CollisionPolygon2D" parent="ItemCollectArea" index="0"]

build_mode = 0
polygon = PoolVector2Array( -43.3396, 48.1022, -43.7368, 38.5691, -7.19308, -49.6124, 7.1066, -49.6124, 43.2531, 36.9803, 43.2531, 45.3217, 38.4865, 50.4855, 0.353973, 44.1301, -37.3814, 51.28 )

[node name="ShieldAudioPlayer" type="AudioStreamPlayer" parent="." index="7"]

stream = ExtResource( 9 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="ItemCollectAudioPlayer" type="AudioStreamPlayer" parent="." index="8"]

stream = ExtResource( 10 )
volume_db = -1.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="9"]

root_node = NodePath("../ShieldSprite")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/shield_activate = SubResource( 3 )
blend_times = [  ]

[connection signal="area_entered" from="ItemCollectArea" to="." method="_on_ItemCollectArea_area_entered"]


